--- a/src/theme.scss
+++ b/src/theme.scss
@@ -17,8 +17,8 @@ $theme: mat.define-light-theme(
 
 $player-component-background: linear-gradient(#e4e5ea, #dfe1e7);
 $player-component-background-active: linear-gradient(#dbdde1, #cbcfd3);
-$player-component-border: 1px solid #a9a9a9;
-$player-component-border-radius: 10px;
+$player-component-border: 1px solid #d0cfcf;
+$player-component-border-radius: 4px;
 $player-component-color: #45454b;
 $player-observer-track-color: #6a6a79;
 $player-observer-track-background: #f5f5f5;
