--- a/src/app/vizual-rx-page/vizual-rx-page.component.scss
+++ b/src/app/vizual-rx-page/vizual-rx-page.component.scss
@@ -1,27 +1,14 @@
 :host {
   height: 100%;
   display: flex;
-  flex-grow: 1;
 }
 
-.left-panel {
-  min-width: 600px;
-  flex: 600px 1 0;
+.page-container {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 10px 0 #bdbdbd;
-
-  .controller {
-    flex-shrink: 0;
-  }
-
-  .content {
-    padding: 1em;
-  }
-
-  .editor {
-    flex-grow: 1;
-  }
+  padding: 1em 3em;
+  gap: 1em;
 }
 
 .content-header {
@@ -29,11 +16,11 @@
   align-items: center;
   gap: 0.2em;
 
-  .spacer {
-    flex-grow: 1;
-  }
-
   .star-icon {
+    margin-right: 1em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     font-size: 28px;
   }
 
@@ -51,6 +38,7 @@
   }
 
   .deprecated-tag {
+    margin-left: 2em;
     border-radius: 5px;
     font-size: 13px;
     line-height: 13px;
@@ -61,30 +49,6 @@
   }
 }
 
-.right-panel {
-  flex: 600px 3 0;
-  overflow: auto;
-}
-
-.spinner-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.error-panel {
-  margin: 1em;
-
-  pre {
-    overflow: auto;
-    margin: 0;
-  }
-}
-
-::ng-deep {
-  html {
-    overflow: hidden;
-  }
+.player {
+  flex-grow: 1;
 }
