--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,14 +11,16 @@
 }
 
 .navbar {
+  flex: 0;
   display: flex;
   gap: 10px;
+  padding: 0.5em;
 
   .github-link {
     margin-left: auto;
 
     img {
-      width: 32px;
+      width: 28px;
       vertical-align: middle;
     }
   }
