--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.scss
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.scss
@@ -1,5 +1,5 @@
-@use "../../../node_modules/@angular/material/index" as mat;
-@import "../../theme";
+@use "../../../../node_modules/@angular/material/index" as mat;
+@import "../../../theme";
 
 :host {
   justify-content: space-evenly;
