Added introduction page + improved performances a little bit.

--- a/src/app/vizual-rx-player/vizual-rx-viewer/vizual-rx-viewer.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-viewer/vizual-rx-viewer.component.html
@@ -1,6 +1,6 @@
 <svg #timeTrack class="time-track">
 </svg>
-<div class="observer" *ngFor="let observer of observers">
+<div class="observer" *ngFor="let observer of observers; trackBy: identifyObserver">
   <div class="observer-label">
     <span>{{ observer.label }}</span>
   </div>
