--- a/src/app/vizual-rx-player/vizual-rx-player.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.html
@@ -1,6 +1,7 @@
 <div class="left-panel">
   <app-vizual-rx-controller [engine]="engine" class="controller"></app-vizual-rx-controller>
-  <app-vizual-rx-editor class="editor" [(code)]="engine.code" (codeChange)="codeChange.next($event)"></app-vizual-rx-editor>
+  <app-vizual-rx-editor class="editor" [(code)]="engine.code" (codeChange)="codeChange.next($event)"
+                        [disableMouseWheel]="disableMouseWheel"></app-vizual-rx-editor>
 </div>
 <div class="right-panel">
   <div [hidden]="engine.error">
