Added beta indicator to navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
   <button mat-icon-button (click)="toggleSidenav()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>VizualRx</span>
+  <div>
+    <span>VizualRx</span>
+    <span class="beta-label">Beta</span>
+  </div>
   <a class="github-link" href="https://github.com/gezorodd" matTooltip="GitHub" target="_blank">
     <img src="assets/github-mark-white.svg" alt="github logo"/>
   </a>
