--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,14 @@
   gap: 10px;
   padding: 0.5em;
 
+  .beta-label {
+    font-size: 12px;
+
+    &:before {
+      content: ' ';
+    }
+  }
+
   .github-link {
     margin-left: auto;
 
