Added editor update layout light mode when used from introduction for better performance on sidenav action.

--- a/src/app/vizual-rx-player/vizual-rx-player.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.html
@@ -1,7 +1,8 @@
 <div class="left-panel">
   <app-vizual-rx-controller [engine]="engine" class="controller"></app-vizual-rx-controller>
   <app-vizual-rx-editor class="editor" [(code)]="engine.code" (codeChange)="codeChange.next($event)"
-                        [disableMouseWheel]="disableMouseWheel"></app-vizual-rx-editor>
+                        [disableMouseWheel]="disableMouseWheel"
+                        [updateLayoutLightMode]="updateLayoutLightMode"></app-vizual-rx-editor>
 </div>
 <div class="right-panel">
   <div [hidden]="engine.error">
