--- a/src/app/pages/introduction-page/introduction-page.component.html
+++ b/src/app/pages/introduction-page/introduction-page.component.html
@@ -35,7 +35,7 @@
       in action.
     </p>
     <app-vizual-rx-player *ngIf="basicExampleEngine" [engine]="basicExampleEngine" [disableMouseWheel]="true"
-                          style="height: 210px"></app-vizual-rx-player>
+                          [updateLayoutLightMode]="true" style="height: 210px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
 
@@ -62,7 +62,7 @@
       Below is an example demonstrating the usage of the <span class="code">createValue</span> function.
     </p>
     <app-vizual-rx-player *ngIf="createValueExampleEngine" [engine]="createValueExampleEngine"
-                          [disableMouseWheel]="true"
+                          [disableMouseWheel]="true" [updateLayoutLightMode]="true"
                           style="height: 410px"></app-vizual-rx-player>
 
     <h2>The <span class="code">colorAt</span> and <span class="code">shapeAt</span> Functions</h2>
@@ -81,7 +81,7 @@
       functions to dynamically assign colors and shapes to values based on their indices.
     </p>
     <app-vizual-rx-player *ngIf="colorAndShapeAtExampleEngine" [engine]="colorAndShapeAtExampleEngine"
-                          [disableMouseWheel]="true"
+                          [disableMouseWheel]="true" [updateLayoutLightMode]="true"
                           style="height: 380px"></app-vizual-rx-player>
     <h2>Visualization of Arrays</h2>
     <p>
@@ -95,7 +95,7 @@
       Below is an example demonstrating how the array representation appears in the diagram:
     </p>
     <app-vizual-rx-player *ngIf="arrayExampleEngine" [engine]="arrayExampleEngine" [disableMouseWheel]="true"
-                          style="height: 340px"></app-vizual-rx-player>
+                          [updateLayoutLightMode]="true" style="height: 350px"></app-vizual-rx-player>
     <h2>Completion, Errors, and Other Values</h2>
     <p>
       As observed in the previous diagrams, various events and values are visually represented to provide a
@@ -115,7 +115,7 @@
     </ul>
     <p>Below is an example showcasing the representation of the completion sign, an error, and an object value:</p>
     <app-vizual-rx-player *ngIf="miscExampleEngine" [engine]="miscExampleEngine" [disableMouseWheel]="true"
-                          style="height: 320px"></app-vizual-rx-player>
+                          [updateLayoutLightMode]="true" style="height: 320px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
 
@@ -145,6 +145,6 @@
       <li>Finally, the values are buffered by groups of 3 items using <span class="code">bufferCount</span>.</li>
     </ol>
     <app-vizual-rx-player *ngIf="pipeExampleEngine" [engine]="pipeExampleEngine" [disableMouseWheel]="true"
-                          style="height: 460px"></app-vizual-rx-player>
+                          [updateLayoutLightMode]="true" style="height: 460px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
