--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
   <div class="outer-page-container">
     <div class="inner-page-container">
       <router-outlet></router-outlet>
+      <div *ngIf="!(initialized$ | async)" class="initialize-spinner-container">
+        <mat-spinner [diameter]="200" [strokeWidth]="5"></mat-spinner>
+      </div>
     </div>
   </div>
 </mat-drawer-container>
