--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -38,6 +38,17 @@
         width: 1em;
       }
     }
+
+    .version {
+      color: #878787;
+      font-size: 0.8em;
+      font-weight: 500;
+      border: 2px solid #878787;
+      border-radius: 5px;
+      padding: 0 0.2em;
+      margin-left: auto;
+      margin-right: 1em;
+    }
   }
 
   .section {
