Change sidenav section style

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -75,13 +75,14 @@
   }
 
   .section-0 {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 1.2em;
     white-space: nowrap;
   }
 
   .section-1 {
     font-weight: 500;
+    font-size: 1rem;
     white-space: nowrap;
     padding-left: 0.5em;
   }
