--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <mat-form-field class="search-input">
     <mat-label>Filter</mat-label>
-    <input #searchInput type="text" matInput (input)="applyFilter(searchInput.value)">
+    <input #searchInput type="text" matInput (input)="filterChanged$.next(searchInput.value)">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
   <mat-selection-list class="section-list" [multiple]="false" [hideSingleSelectionIndicator]="true"
@@ -10,7 +10,7 @@
       <ng-container *ngTemplateOutlet="sectionTemplate; context: {$implicit: section}"></ng-container>
     </ng-container>
     <ng-template #sectionTemplate let-section>
-      <div [class]="'section section-' + section.level"
+      <div [hidden]="section.hidden" [class]="'section section-' + section.level"
            [ngClass]="{'collapsing': section.collapsing, 'expanding': section.expanding, 'collapsed': section.collapsed}">
         <div class="section-label">
           <button mat-button (click)="toggleSectionCollapsed(section)">
@@ -22,14 +22,15 @@
         <div class="section-children-container"
              [style.height]="getSectionHeight(section, sectionChildren.clientHeight)">
           <div #sectionChildren class="section-children">
-            <ng-container *ngFor="let subSection of section.sections">
-              <ng-container *ngTemplateOutlet="sectionTemplate; context: {$implicit: subSection}"></ng-container>
+            <ng-container *ngFor="let child of section.children">
+              <ng-container *ngTemplateOutlet="sectionTemplate; context: {$implicit: child}"></ng-container>
             </ng-container>
             <ng-container *ngFor="let page of section.pages">
-              <mat-list-option [value]="page.routeUrl" [selected]="isPageSelected(page) | async">
+              <mat-list-option *ngIf="!page.hidden" [value]="page.routeUrl" [selected]="isPageSelected(page) | async">
                 <div class="page-option">
                   <span [class.deprecated]="page.deprecated">{{ page.title }}</span>
-                  <mat-icon *ngIf="page.starred" [fontSet]="'material-symbols-rounded'" class="star-icon">star</mat-icon>
+                  <mat-icon *ngIf="page.starred" [fontSet]="'material-symbols-rounded'" class="star-icon">star
+                  </mat-icon>
                 </div>
               </mat-list-option>
             </ng-container>
