Fixed some scss issues on low resolution + add playground initial code.

--- a/src/app/pages/playground-page/playground-page.component.html
+++ b/src/app/pages/playground-page/playground-page.component.html
@@ -1,2 +1,3 @@
+<h1>VizualRx Playground</h1>
 <app-vizual-rx-player *ngIf="engine" class="player" [engine]="engine"
                       (codeChange)="code = $event"></app-vizual-rx-player>
