--- a/src/app/vizual-rx-player/vizual-rx-viewer/vizual-rx-viewer.component.scss
+++ b/src/app/vizual-rx-player/vizual-rx-viewer/vizual-rx-viewer.component.scss
@@ -29,6 +29,7 @@
   background-image: $player-component-background;
   border-right: $player-component-border;
   width: 150px;
+  min-width: 150px;
 
   span {
     padding: 0.8em;
