Added links to sidenav options.

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -27,11 +27,11 @@
             </ng-container>
             <ng-container *ngFor="let page of section.pages">
               <mat-list-option *ngIf="!page.hidden" [value]="page.routeUrl" [selected]="(currentPage$ | async) === page">
-                <div class="page-option">
+                <a class="page-option" [routerLink]="[page.routeUrl]">
                   <span [class.deprecated]="page.deprecated">{{ page.title }}</span>
                   <mat-icon *ngIf="page.starred" [fontSet]="'material-symbols-rounded'" class="star-icon">star
                   </mat-icon>
-                </div>
+                </a>
               </mat-list-option>
             </ng-container>
           </div>
