--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -100,6 +100,12 @@
     ::ng-deep &:not(.mdc-list-item--selected) .star-icon {
       color: #595959;
     }
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+      font-weight: inherit;
+    }
   }
 
   .page-option {
