--- a/src/app/pages/playground-page/playground-page.component.html
+++ b/src/app/pages/playground-page/playground-page.component.html
@@ -1,3 +1,3 @@
 <h1>VizualRx Playground</h1>
-<app-vizual-rx-player *ngIf="engine" class="player" [engine]="engine"
+<app-vizual-rx-player *ngIf="remote" class="player" [remote]="remote"
                       (codeChange)="code = $event"></app-vizual-rx-player>
