--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -19,15 +19,14 @@
           <span>{{ section.label }}</span>
           <span *ngIf="section.version as version" class="version">{{ version }}</span>
         </div>
-        <div class="section-children-container"
-             [style.height]="getSectionHeight(section, sectionChildren.clientHeight)">
-          <div #sectionChildren class="section-children">
+        <div class="section-children-container" #sectionChildrenContainer [id]="'section-' + section.id + '-children-container'">
+          <div class="section-children">
             <ng-container *ngFor="let child of section.children">
               <ng-container *ngTemplateOutlet="sectionTemplate; context: {$implicit: child}"></ng-container>
             </ng-container>
             <ng-container *ngFor="let page of section.pages">
-              <mat-list-option *ngIf="!page.hidden" [value]="page.routeUrl" [selected]="(currentPage$ | async) === page">
-                <a class="page-option" [routerLink]="[page.routeUrl]">
+              <mat-list-option *ngIf="!page.hidden" [value]="page.routeUrl" [selected]="(currentPage$ | async) === page" class="page-option">
+                <a [routerLink]="[page.routeUrl]">
                   <span [class.deprecated]="page.deprecated">{{ page.title }}</span>
                   <mat-icon *ngIf="page.starred" [fontSet]="'material-symbols-rounded'" class="star-icon">star
                   </mat-icon>
