--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -90,6 +90,13 @@
     padding-left: 0.5em;
   }
 
+  .section-2 {
+    font-weight: 400;
+    font-size: 1rem;
+    white-space: nowrap;
+    padding-left: 1em;
+  }
+
   .section-children-container {
     transition: all 0.2s ease-out;
     overflow: hidden;
