--- a/src/app/vizual-rx-player/vizual-rx-player.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.html
@@ -1,5 +1,5 @@
 <div class="left-panel">
-  <app-vizual-rx-controller [remote]="remote" class="controller"></app-vizual-rx-controller>
+  <app-vizual-rx-controller [remote]="remote" class="controller" (switchRemote)="switchRemote()"></app-vizual-rx-controller>
   <app-vizual-rx-editor class="editor" [(code)]="remote.code" (codeChange)="codeChange.next($event)"
                         [disableMouseWheel]="disableMouseWheel"
                         [updateLayoutLightMode]="updateLayoutLightMode"></app-vizual-rx-editor>
