--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.scss
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.scss
@@ -47,6 +47,10 @@ button {
   padding: 0 1em;
   justify-content: end;
   color: $player-component-color;
+
+  label {
+    white-space: nowrap;
+  }
 }
 
 .grow-1 {
