--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
@@ -1,13 +1,13 @@
-<button matRipple (click)="remote.replay()" matTooltip="Replay">
+<button matRipple (click)="remote.replay()" matTooltip="Replay (Ctrl + Enter)">
   <mat-icon>refresh</mat-icon>
 </button>
-<button *ngIf="remote.playing$ | async" (click)="remote.pause()" matTooltip="Pause">
+<button *ngIf="remote.playing$ | async" (click)="remote.pause()" matTooltip="Pause (Ctrl + Space)">
   <mat-icon>pause</mat-icon>
 </button>
-<button matRipple *ngIf="!(remote.playing$ | async)" (click)="remote.play()" matTooltip="Play">
+<button matRipple *ngIf="!(remote.playing$ | async)" (click)="remote.play()" matTooltip="Play (Ctrl + Space)">
   <mat-icon>play_arrow</mat-icon>
 </button>
-<button matRipple (click)="remote.stop()" matTooltip="Stop" [disabled]="remote.stopped$ | async">
+<button matRipple (click)="remote.stop()" matTooltip="Stop (Ctrl + K)" [disabled]="remote.stopped$ | async">
   <mat-icon>stop</mat-icon>
 </button>
 <div class="grow-1"></div>
