--- a/src/app/vizual-rx-player/vizual-rx-player.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.html
@@ -1,8 +1,12 @@
 <div class="left-panel">
-  <app-vizual-rx-controller [remote]="remote" class="controller" (switchRemote)="switchRemote()"></app-vizual-rx-controller>
+  <app-vizual-rx-controller [remote]="remote" class="controller"
+                            (switchRemote)="switchRemote()"></app-vizual-rx-controller>
   <app-vizual-rx-editor class="editor" [(code)]="remote.code" (codeChange)="codeChange.next($event)"
                         [disableMouseWheel]="disableMouseWheel"
-                        [updateLayoutLightMode]="updateLayoutLightMode"></app-vizual-rx-editor>
+                        [updateLayoutLightMode]="updateLayoutLightMode"
+                        (ctrlEnter)="remote.replay()"
+                        (ctrlSpace)="remote.playing ? remote.pause() : remote.play()"
+                        (ctrlK)="remote.stop()"></app-vizual-rx-editor>
 </div>
 <div class="right-panel">
   <div [hidden]="remote.error">
