--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,15 +1,46 @@
 <div class="main-container">
-  <mat-form-field class="search-input">
-    <mat-label>Filter</mat-label>
-    <input #searchInput type="text" matInput (input)="filterChanged$.next(searchInput.value)">
-    <mat-icon matSuffix>search</mat-icon>
-  </mat-form-field>
+  <div class="header">
+    <mat-form-field class="input-filter">
+      <mat-label>Filter</mat-label>
+      <input #searchInput type="text" matInput (input)="filterChanged$.next(searchInput.value)">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+    <button mat-icon-button [matMenuTriggerFor]="menu" class="menu-button">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="expandAll()">
+        <mat-icon>unfold_more</mat-icon>
+        <span>Expand All</span>
+      </button>
+      <button mat-menu-item (click)="collapseAll()">
+        <mat-icon>unfold_less</mat-icon>
+        <span>Collapse All</span>
+      </button>
+      <ng-container *ngIf="pageVisibilityMode !== 'show-all'; else filterItems">
+        <button mat-menu-item (click)="pageVisibilityMode = 'show-all'">
+          <mat-icon [fontSet]="'material-symbols-rounded'">visibility</mat-icon>
+          <span>Show All</span>
+        </button>
+      </ng-container>
+      <ng-template #filterItems>
+        <button mat-menu-item (click)="pageVisibilityMode = 'hide-deprecated'">
+          <mat-icon [fontSet]="'material-symbols-rounded'">filter_alt</mat-icon>
+          <span>Hide Deprecated</span>
+        </button>
+        <button mat-menu-item (click)="pageVisibilityMode = 'only-show-starred'">
+          <mat-icon [fontSet]="'material-symbols-rounded'">star</mat-icon>
+          <span>Only Show Starred</span>
+        </button>
+      </ng-template>
+    </mat-menu>
+  </div>
   <div class="section-list">
     <ng-container *ngFor="let section of sections">
       <ng-container *ngTemplateOutlet="sectionTemplate; context: {$implicit: section}"></ng-container>
     </ng-container>
     <ng-template #sectionTemplate let-section>
-      <div [hidden]="section.hidden" [class]="'section section-' + section.level"
+      <div [hidden]="section.filtered" [class]="'section section-' + section.level"
            [ngClass]="{'collapsing': section.collapsing, 'expanding': section.expanding, 'collapsed': section.collapsed}">
         <div class="section-label">
           <button mat-button (click)="toggleSectionCollapsed(section)">
@@ -25,7 +56,7 @@
             </ng-container>
             <div *ngIf="section.pages.length" class="page-container">
               <ng-container *ngFor="let page of section.pages">
-                <a #pageLink *ngIf="!page.hidden" [routerLink]="[page.routeUrl]" [class.selected]="(currentPage$ | async) === page">
+                <a #pageLink *ngIf="isPageVisible(page)" [routerLink]="[page.routeUrl]" [class.selected]="(currentPage$ | async) === page">
                   <span [class.deprecated]="page.deprecated">{{ page.title }}</span>
                   <mat-icon *ngIf="page.starred" [fontSet]="'material-symbols-rounded'" class="star-icon">star
                   </mat-icon>
