--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -10,10 +10,40 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+}
 
-  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
-    display: none;
+.header {
+  display: flex;
+
+  .input-filter {
+    flex-grow: 1;
+
+    &::ng-deep {
+      .mat-mdc-text-field-wrapper {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+
+      .mat-mdc-form-field-subscript-wrapper {
+        display: none;
+      }
+    }
   }
+
+  .menu-button {
+    height: 100%;
+    background-color: var(--mdc-filled-text-field-container-color);
+    border-radius: 0;
+    border-bottom: 1px solid var(--mdc-filled-text-field-active-indicator-color);
+
+    &:hover {
+      border-color: var(--mdc-filled-text-field-hover-active-indicator-color);
+    }
+
+    &::ng-deep > * {
+      border-radius: 0;
+    }
+  };
 }
 
 .section-list {
