--- a/src/theme.scss
+++ b/src/theme.scss
@@ -27,8 +27,8 @@ $player-time-track-tick-color: #8f8f99;
 $player-observer-value-color-red: #ff8178;
 $player-observer-value-color-blue: #6797e5;
 $player-observer-value-color-green: #7dd180;
-$player-observer-value-color-orange: #ffae51;
-$player-observer-value-color-yellow: #fff376;
-$player-observer-value-color-purple: #b493ef;
-$player-observer-value-color-cyan: #97ecf8;
-$player-observer-value-color-pink: #ffb9cf;
+$player-observer-value-color-yellow: #ffcd4c;
+$player-observer-value-color-orange: #ffa569;
+$player-observer-value-color-purple: #d07bff;
+$player-observer-value-color-teal: #6dcfc6;
+$player-observer-value-color-indigo: #8374c7;
