Changed overview after color change

--- a/src/app/pages/overview-page/overview-page.component.html
+++ b/src/app/pages/overview-page/overview-page.component.html
@@ -56,7 +56,7 @@
     </p>
     <p>
       Supported Shapes: circle, square, triangle, diamond, pentagon. <br/>
-      Supported Colors: red, blue, green, yellow, orange, purple, teal, indigo
+      Supported Colors: red, blue, green, yellow, orange, purple, teal, indigo.
     </p>
     <p>
       Below is an example demonstrating the usage of the <span class="code">createValue</span> function.
