TimeFactor default value is not based on the last selected value.

--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
@@ -18,7 +18,7 @@
 <div class="slider">
   <label>Time Speed</label>
   <mat-slider min="0" max="2" step="0.1" [showTickMarks]="true" [discrete]="true">
-    <input matSliderThumb [(ngModel)]="remote.timeFactor" [matTooltip]="remote.timeFactor.toString()">
+    <input matSliderThumb [(ngModel)]="timeFactor" [matTooltip]="remote.timeFactor.toString()">
   </mat-slider>
 </div>
 <div class="slider">
