--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
@@ -11,13 +11,12 @@
   <mat-icon>stop</mat-icon>
 </button>
 <div class="grow-1"></div>
-<button *ngIf="!isWebWorkerDisabled" matRipple (click)="switchRemote.next()" [matTooltip]="switchRemoteTooltip"
-        [disabled]="!isWebWorkerSupported">
-  <mat-icon>{{ isWebWorkerRemote ? 'layers' : 'layers_clear' }}</mat-icon>
+<button matRipple (click)="switchRemote.next()" [matTooltip]="switchRemoteTooltip">
+  <mat-icon>{{ isVirtualTimeEngine ? 'schedule' : 'history_toggle_off' }}</mat-icon>
 </button>
 <div class="slider">
   <label>Time Speed</label>
-  <mat-slider min="0" max="2" step="0.1" [showTickMarks]="true" [discrete]="true">
+  <mat-slider min="0" [max]="maxTimeFactor" step="0.1" [showTickMarks]="true" [discrete]="true">
     <input matSliderThumb [(ngModel)]="timeFactor" [matTooltip]="remote.timeFactor.toString()">
   </mat-slider>
 </div>
